--- a/wiki/ClientInstall_OSX8_v1.wiki
+++ b/wiki/ClientInstall_OSX8_v1.wiki
@@ -23,7 +23,7 @@ sudo xcode-select -switch /Applications/Xcode.app/Contents/Developer/
 ----
  # install some of the base deps
 {{{
-$ sudo port install p5-digest-sha p5-digest-sha1 p5-log-dispatch p5-list-moreutils p5-datetime
+$ sudo port install perl5 p5-digest-sha p5-digest-sha1 p5-log-dispatch p5-list-moreutils p5-datetime
 }}}
  # the perl OSSP::uuid bindings must be installed from source into /opt/local (for macports)
 {{{
