--- a/wiki/ServerInstall_v1_test_matrix.wiki
+++ b/wiki/ServerInstall_v1_test_matrix.wiki
@@ -1,3 +1,6 @@
 #summary matrix for CIF 1.0 installation
 
 = Introduction =
+
+|| OS || CIF || Result || Date || Person ||
+|| Ubuntu 12.04.3 || cif-v1-1.0.0-rc.4.1.tar.gz || ? || 8/26/2013 || giovino ||
