--- a/wiki/ServerInstall_v1_test_matrix.wiki
+++ b/wiki/ServerInstall_v1_test_matrix.wiki
@@ -4,3 +4,12 @@
 
 || OS || CIF || Result || Date || Person ||
 || Ubuntu 12.04.3 || cif-v1-1.0.0-rc.4.1.tar.gz || ? || 8/26/2013 || giovino ||
+
+== Result == 
+
+Success is defined as the following without errors:
+ * time cif_crontool -p hourly -d -P
+ * time cif_crontool -p daily -d -P
+ * cif -d -M -q google.com
+ * time cif_feed -d
+ * time cif -M -d -q infrastructure/scan -c 85
