Edited wiki page ServerInstall_v1_test_matrix through web user interface.

--- a/wiki/ServerInstall_v1_test_matrix.wiki
+++ b/wiki/ServerInstall_v1_test_matrix.wiki
@@ -2,7 +2,7 @@
 
 = Introduction =
 
-== Single host ==
+== Server install single host ==
 
 || OS || CIF || Result || Date || Person ||
 || Ubuntu 12.04.3 || cif-v1-1.0.0-rc.4.1.tar.gz || ? || 8/26/2013 || giovino ||
@@ -14,6 +14,6 @@ Success is defined as the following without errors:
  * time cif_feed -d
  * time cif -M -d -q infrastructure/scan -c 85
 
-== Multiple host ==
+== Server install multiple host ==
 
 == Result == 
