--- a/wiki/ServerInstall_v1_test_matrix.wiki
+++ b/wiki/ServerInstall_v1_test_matrix.wiki
@@ -7,7 +7,7 @@
 || OS || CIF || Result || Date || Person ||
 || Ubuntu 12.04.3 || cif-v1-1.0.0-rc.4.1.tar.gz || ? || 8/26/2013 || giovino ||
 || Debian 6.0.7 || cif-v1-1.0.0-rc.4.1.tar.gz || || || ||
-|| || cif-v1-1.0.0-rc.4.1.tar.gz || || || ||
+|| Debian 7.1 || cif-v1-1.0.0-rc.4.1.tar.gz || || || ||
 || || cif-v1-1.0.0-rc.4.1.tar.gz || || || ||
 || || cif-v1-1.0.0-rc.4.1.tar.gz || || || ||
 
