Edited wiki page ServerInstall_v1_test_matrix through web user interface.

--- a/wiki/ServerInstall_v1_test_matrix.wiki
+++ b/wiki/ServerInstall_v1_test_matrix.wiki
@@ -2,8 +2,7 @@
 
 = Introduction =
 
-RC 4.1 bits
-https://www.dropbox.com/sh/69g1kl18lzfgd42/gQ_ohBVago
+[https://www.dropbox.com/sh/69g1kl18lzfgd42/gQ_ohBVago RC 4.1 bits]
 
 == Server install single host ==
 
