Edited wiki page ServerInstall_v1_test_matrix through web user interface.

--- a/wiki/ServerInstall_v1_test_matrix.wiki
+++ b/wiki/ServerInstall_v1_test_matrix.wiki
@@ -18,7 +18,7 @@
 Success is defined as the following without errors:
  * time cif_crontool -p hourly -d -P
  * time cif_crontool -p daily -d
- * time cif_smrt ...
+ * time cif_smrt -C /home/cif/.cif -r /opt/cif/etc/zeustracker.cfg -f dropzones -d -P
  * cif -d -M -q google.com
  * time cif_feed -d
  * time cif -M -d -q infrastructure/scan -c 85
