Edited wiki page ServerInstall_v1_test_matrix through web user interface.

--- a/wiki/ServerInstall_v1_test_matrix.wiki
+++ b/wiki/ServerInstall_v1_test_matrix.wiki
@@ -6,7 +6,7 @@
 
 == Server install single host ==
 
-[https://code.google.com/p/collective-intelligence-framework/wiki/ServerInstall_v1 Install instructions]
+[https://code.google.com/p/collective-intelligence-framework/wiki/ServerInstall_v1 Server install instructions]
 
 || OS || arch || CIF || Result || Date || Person ||
 || Ubuntu 12.04.3 || amd64 || cif-v1-1.0.0-rc.4.1.tar.gz || ? || 8/26/2013 || giovino ||
@@ -22,6 +22,12 @@ Success is defined as the following without errors:
  * cif -d -M -q google.com
  * time cif_feed -d
  * time cif -M -d -q infrastructure/scan -c 85
+
+== CLI client install ==
+
+[https://code.google.com/p/collective-intelligence-framework/wiki/ClientInstall_v1 CLI install instructions]
+
+|| OS || arch || CIF || Result || Date || Person ||
 
 == Server install multiple host ==
 
