Edited wiki page ServerInstall_v1_test_matrix through web user interface.

--- a/wiki/ServerInstall_v1_test_matrix.wiki
+++ b/wiki/ServerInstall_v1_test_matrix.wiki
@@ -9,7 +9,7 @@
 [https://code.google.com/p/collective-intelligence-framework/wiki/ServerInstall_v1 Server install instructions]
 
 || OS || arch || CIF || Result || Date || Person ||
-|| Ubuntu 12.04.3 || amd64 || cif-v1-1.0.0-rc.4.1.tar.gz || ? || 8/26/2013 || giovino ||
+|| Ubuntu 12.04.3 || amd64 || cif-v1-1.0.0-rc.4.1.tar.gz || success || 8/26/2013 || giovino ||
 || Debian 6.0.7 || amd64 || cif-v1-1.0.0-rc.4.1.tar.gz || || || ||
 || Debian 7.1 || amd64 || cif-v1-1.0.0-rc.4.1.tar.gz || || || ||
 || CentOS 5.9 || amd64 || cif-v1-1.0.0-rc.4.1.tar.gz || || || ||
