--- a/wiki/ServerInstall_v1_test_matrix.wiki
+++ b/wiki/ServerInstall_v1_test_matrix.wiki
@@ -44,10 +44,10 @@ Success is defined as the following without errors:
 == Web browser client install ==
 
 || Browser || CIF Server || Query || Submit || Date || Person ||
-|| Firefox 23.0.1 || v0 || || || ||
-|| Firefox 23.0.1 || v1 || || || ||
-|| Chrome 29.0.x || v0 || || || ||
-|| Chrome 29.0.x || v1 || || || ||
+|| Firefox 23.0.1 || v0 || || || || ||
+|| Firefox 23.0.1 || v1 || || || || ||
+|| Chrome 29.0.x || v0 || || || || ||
+|| Chrome 29.0.x || v1 || || || || ||
 
 Success is defined as the following without errors:
 
