--- a/wiki/ServerInstall_v1_test_matrix.wiki
+++ b/wiki/ServerInstall_v1_test_matrix.wiki
@@ -17,12 +17,15 @@
 
 Success is defined as the following without errors:
  * server installs without error
- * time cif_crontool -p hourly -d -P
- * time cif_crontool -p daily -d
- * time cif_smrt -C /home/cif/.cif -r /opt/cif/etc/zeustracker.cfg -f dropzones -d -P
- * cif -d -M -q google.com
- * time cif_feed -d
- * time cif -M -d -q infrastructure/scan -c 85
+ * run the following commands without error
+{{{
+time cif_crontool -p hourly -d -P
+time cif_crontool -p daily -d
+time cif_smrt -C /home/cif/.cif -r /opt/cif/etc/zeustracker.cfg -f dropzones -d -P
+cif -d -M -q google.com
+time cif_feed -d
+time cif -M -d -q infrastructure/scan -c 85
+}}}
 
 == CLI client install ==
 
