--- a/wiki/ServerInstall_v1_test_matrix.wiki
+++ b/wiki/ServerInstall_v1_test_matrix.wiki
@@ -14,7 +14,7 @@
 || OS || arch || CIF || Result || Date || Person ||
 || Ubuntu 12.04.3 || amd64 || cif-v1-1.0.0-rc.4.1.tar.gz || success || 8/26/2013 || giovino ||
 || Debian 6.0.7 || amd64 || cif-v1-1.0.0-rc.4.1.tar.gz || success || 8/27/2013 || giovino ||
-|| Debian 7.1 || amd64 || cif-v1-1.0.0-rc.4.1.tar.gz || || || ||
+|| Debian 7.1 || amd64 || cif-v1-1.0.0-rc.4.1.tar.gz || success || 2013-08-28 || wy ||
 || CentOS 5.9 || amd64 || cif-v1-1.0.0-rc.4.1.tar.gz || || || ||
 || CentOS 6.4 || amd64 || cif-v1-1.0.0-rc.4.1.tar.gz || success || 2013-08-27 || wy ||
 
