Edited wiki page ClientInstall_DebianWheezy_v1 through web user interface.

--- a/wiki/ClientInstall_DebianWheezy_v1.wiki
+++ b/wiki/ClientInstall_DebianWheezy_v1.wiki
@@ -15,7 +15,7 @@ $ sudo aptitude -y install build-essential libdigest-sha1-perl libnet-cidr-perl 
 }}}
  # Install the remaining CPAN modules
 {{{
-$ sudo PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Module::Build,Test::SharedFork,Test::TCP,Regexp::Common::net::CIDR,LWP::Protocol::https,Google::ProtocolBuffers,Iodef::Pb::Simple,Compress::Snappy,Snort::Rule,Log::Dispatch,Net::SSLeay'
+$ sudo PERL_MM_USE_DEFAULT=1 perl -MCPAN -e 'install Test::SharedFork,Test::TCP,Regexp::Common::net::CIDR,LWP::Protocol::https,Google::ProtocolBuffers,Iodef::Pb::Simple,Compress::Snappy,Snort::Rule,Log::Dispatch,Net::SSLeay'
 }}}
 == Default CIF user ==
 ----
