--- a/wiki/ServerInstall_v1_test_matrix.wiki
+++ b/wiki/ServerInstall_v1_test_matrix.wiki
@@ -119,7 +119,7 @@ time cif -M -d -q infrastructure/scan -c 85
 || OS || arch || CIF || Result || Date || Person ||
 || Ubuntu 12.04.3 || amd64 || libcif-v1.0.0-rc.4.1.tar.gz || ||  ||  ||
 || Debian 6.0.7 || amd64 || libcif-v1.0.0-rc.4.1.tar.gz || || || ||
-|| Debian 7.1 || amd64 || libcif-v1.0.0-rc.4.1.tar.gz || || || ||
+|| Debian 7.1 || amd64 || libcif-v1.0.0-rc.4.1.tar.gz || success || 2013-08-27 || wy ||
 || CentOS 5.9 || amd64 || libcif-v1.0.0-rc.4.1.tar.gz || || || ||
 || CentOS 6.4 || amd64 || libcif-v1.0.0-rc.4.1.tar.gz || success || 2013-08-27 || wy ||
 || OS X 10.7 || amd64 || libcif-v1.0.0-rc.4.1.tar.gz || || || ||
