--- a/wiki/SideBar.wiki
+++ b/wiki/SideBar.wiki
@@ -7,7 +7,7 @@
   * [http://groups.google.com/group/ci-framework Discussion Group]
   * [DeveloperWorkflow_v1 Developer Workflow]
   * [ThreatIntelligenceTools Threat Intelligence Tools]
- * (testing) [WhatisCIF v1]
+ * (stable) [WhatisCIF v1]
   * [FAQ_v1 FAQ]
    * [TaxonomyConfidence_v1 Confidence Definitions]
    * [TaxonomyAssessment_v1 Assessment Definitions]
