--- a/wiki/Upgrade_v1.wiki
+++ b/wiki/Upgrade_v1.wiki
@@ -114,10 +114,10 @@ feed_retention = 7
 }}}
 ==== Upgrade ====
  # upgrade system dependencies
-  * (testing) [Upgrade_DebianSqueeze_v1 Debian 6]
-  * (testing) [Upgrade_DebianWheezy_v1 Debian 7]
-  * (testing) [Upgrade_Ubuntu12_v1 Ubuntu 12]
-  * (testing) [Upgrade_CentOS6_v1 CentOS6]
+  * (stable) [Upgrade_DebianSqueeze_v1 Debian 6]
+  * (stable) [Upgrade_DebianWheezy_v1 Debian 7]
+  * (stable) [Upgrade_Ubuntu12_v1 Ubuntu 12]
+  * (stable) [Upgrade_CentOS6_v1 CentOS6]
  # install the latest CIF [https://github.com/collectiveintel/cif-v1/releases release] (be sure to pick the green-highlighted pre-built package, not the 'source')
 {{{
 $ tar -xzvf cif-v1-1.X.X.tar.gz
