Edited wiki page ServerInstall_v1 through web user interface.

--- a/wiki/ServerInstall_v1.wiki
+++ b/wiki/ServerInstall_v1.wiki
@@ -105,6 +105,8 @@ $ sudo make install
 $ sudo make initdb
 }}}
 
+_note: there is no need for 'make' itself, just 'configure' and 'make install' since this is a Perl based application, nothing to compile..._
+
 = Configuration =
 ----
 == Environment ==
