Edited wiki page Feeds_v1 through web user interface.

--- a/wiki/Feeds_v1.wiki
+++ b/wiki/Feeds_v1.wiki
@@ -128,3 +128,5 @@ $ cif -q url/phishing -c 85 -p snort
 $ cif -q url/phishing -c 85 -p csv
 $ cif -q url/phishing -c 85 -p html
 }}}
+
+= Advanced =
